# libelas-gpu

./: CMakeLists.txt  main_cpu.cpp  main_gpu.cpp
GPU/: elas_gpu.cu  elas_gpu.h
